fixed media-cta when its right aligned

--- a/components/media-cta.scss
+++ b/components/media-cta.scss
@@ -108,7 +108,8 @@ $iconWidth: 300px;
     }
    .MediaCTA__card--title {
       &:after {
-        margin-right: 10px;
+        margin-right: 0px;
+        left: auto;
       }
     }
   }
